packages/webassemblyjs/test/fixtures/conversions/type-errors/trunc_u-i32-f64/exec.tjs
it("should throw an error during instantiation when type checking fails", () => {
  assert.throws(
    () => WebAssembly.instantiateFromSource(watmodule),
    "Expected type f64 but got i64."
  );
});
